# goji

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: main.yaml
goji/: __init__.py  __main__.py  ansi.py  auth.py  client.py  commands.py  config.py  editor.py  models.py  report.py  text_parser.py  utils.py
goji/tests/models/: test_issue.py  test_user.py
tests/: conftest.py  server.py  test_ansi.py  test_auth.py  test_client.py  test_commands.py  test_report.py  test_text_parser.py
tests/client/: test_search.py  test_sprint.py
tests/commands/: test_assign.py  test_change_status.py  test_comment.py  test_create.py  test_edit.py  test_login.py  test_search.py  test_show.py  test_sprint.py  test_unassign.py  test_whoami.py  utils.py
tests/models/: test_issue.py  test_transition.py  test_user.py
