[tool.poetry]
name = "goji"
version = "0.5.0"
description = "Command line JIRA client"
authors = ["Kyle Fuller <kyle@fuller.li>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
requests = {extras = ["socks"], version = "^2.27.1"}
toml = "^0.10.2"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
goji = 'goji.commands:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
