[project]
name = "goji"
version = "0.6.0"
description = "Command line JIRA client"
requires-python = ">=3.10,<4.0"
dependencies = [
  "click (>=8.1.8,<9.0.0)",
  "requests[socks] (>=2.27.1, < 3.0.0)",
  "toml (>=0.10.2,<0.11.0)",
  "jsonschema (>=4.23.0,<5.0.0)",
]
authors = [
  { name = "Kyle Fuller", email = "kyle@fuller.li" }
]
license = { text = "BSD-2-Clause" }
readme = "README.md"

[project.scripts]
goji = 'goji.commands:cli'

[tool.poetry.group.dev.dependencies]
pytest = {version="^8.3.5"}

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
